# jackflores.com

./: .gitignore  Cargo.toml  README  README.md
.github/workflows/: fly.yml
backend/: Cargo.toml  configuration.yaml
backend/.github/: general.yml
backend/migrations/: 20250415022040_create_shows_table.sql
backend/scripts/: init_db.sh
backend/src/: main.rs  startup.rs
backend/src/routes/: mod.rs  shows.rs
backend/src/util/: validate.rs
backend/tests/: bad_file.txt  get_shows.rs  health_check.rs  helper.rs  main.rs  post_show.rs
frontend/: Cargo.toml  Dockerfile  fly.toml  index.html  nginx.conf  tailwind.config.js
frontend/src/: main.rs  router.rs  styles.rs
frontend/src/components/: footer.rs  images.rs  links.rs  mod.rs  nav.rs  section.rs
frontend/src/pages/: contact.rs  experience.rs  mod.rs  passions.rs  projects.rs
frontend/styles/: output.css
