[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
gloo-timers = "0.3"
yew = { version = "0.21", features = ["csr"] }
yew_icons = {version = "0.8", features = ["BootstrapGithub", "BootstrapLinkedin", "BootstrapTelephoneOutboundFill", "LucideMail"]}
yew-router = "0.18"